--- a/public/bower.json
+++ b/public/bower.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "vaadin-grid": "^2.0.3",
     "paper-styles": "1.3.1",
-    "vaadin-date-picker": "^1.2.3"
+    "vaadin-date-picker": "^1.2.3",
+    "iron-ajax": "^2.0.2"
   },
   "resolutions": {
     "vaadin-date-picker": "1.1.4"
