--- a/public/bower.json
+++ b/public/bower.json
@@ -16,7 +16,8 @@
     "vaadin-grid": "^2.0.3",
     "paper-styles": "1.3.1",
     "vaadin-date-picker": "^1.2.3",
-    "iron-ajax": "^2.0.2"
+    "iron-ajax": "^2.0.2",
+    "paper-slider": "1.0.15"
   },
   "resolutions": {
     "vaadin-date-picker": "1.1.4"
