--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,12 @@
     "vaadin-grid": "^2.0.3",
     "paper-styles": "1.3.1",
     "vaadin-date-picker": "^1.2.3",
-    "iron-ajax": "^2.0.2",
+    "iron-ajax": "^2.0.2"
   },
   "resolutions": {
     "vaadin-date-picker": "1.1.4"
+  },
+  "devDependencies": {
+    "web-component-tester": "^6.0.0"
   }
 }
