--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0"
   }
 }
